<resources>
    <string name="app_name">MyPiano</string>

    <string name="ENGLISH" translatable="false">English</string>
    <string name="JAPANESE" translatable="false">日本</string>
    <string name="KOREAN" translatable="false">"한국인 </string>
    <string name="FRENCH" translatable="false">Français</string>
    <string name="ITALIA" translatable="false">Italia</string>
    <string name="GERMAN" translatable="false">Deutsch</string>
    <string name="VIETNAM" translatable="false">Tiếng Việt</string>
    <string name="INDONESIA" translatable="false">Indonesia</string>
    <string name="BRAZIL" translatable="false">Brazil</string>
    <string name="TURKEY" translatable="false">Türkiye</string>
    <string name="SPAIN" translatable="false">España</string>
    <string name="INDIA" translatable="false">भारत</string>
    <string name="guitar">Guitar</string>
    <string name="style">Style</string>
    <string name="key_mode">Keys mode</string>
    <string name="import_audio">Import audio</string>
    <string name="size_key">Size key</string>
    <string name="speed">Speed</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="choose_other_keyboard">Choose other keyboard mode:</string>
    <string name="double_key">Double keys</string>
    <string name="two_players">Two players</string>
    <string name="learn">Learn</string>
    <string name="lesson">Lesson</string>
    <string name="key_record">Keys Record</string>
    <string name="mic_record">Mic Record</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="show_notes">Show notes</string>
    <string name="pitch">Pitch</string>
    <string name="reverb">Reverb</string>
    <string name="jingbell">Jingle bell</string>
    <string name="little_star">Little Star</string>
    <string name="last_christmas">Last Christmas</string>
    <string name="all_of_me">All Of Me</string>
    <string name="play">Play</string>
    <string name="piano_key_board">Piano keyboard</string>
    <string name="save_success">Success! Save to</string>
    <string name="record_list_u"><u>Record list</u></string>
    <string name="new_record">New record</string>
    <string name="save_file_record">Save file record</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name_is_not_empty">File name can not be empty!</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="apply">Apply</string>
    <string name="style_piano">Style piano</string>
    <string name="your_audio">Your Audio</string>
    <string name="volume">Volume</string>
    <string name="am">Am</string>
    <string name="bm">Bm</string>
    <string name="Dm">Dm</string>
    <string name="Em">Em</string>
    <string name="g">G</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="c">C</string>
    <string name="style_guitar">Style guitar</string>
    <string name="style_drum_set">Style Drum</string>
    <string name="learn_piano">Learn Piano</string>
    <string name="play_piano">Play Piano</string>
    <string name="drumSet">Drumset</string>
    <string name="saxophone">Saxophone</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="current_language">Current Language</string>
    <string name="all_language">All Language</string>
    <string name="title_started">When a beautiful music comes on, I want to play it myself and enjoy the music.</string>
    <string name="title_started_1">Immerse yourself in the music to relax your whole body and explode with new energy</string>
    <string name="home">Home</string>
    <string name="include_ads">(This action can contain ads)</string>
    <string name="setting">Setting</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy">Privacy Policy</string>

    <string name="do_you_like_app">Do you like our application so far?</string>
    <string name="not_really">Not really</string>
    <string name="yes_i_like">Yes, I Like it</string>
    <string name="star_rate_2">Let us know and help us improve the experience for users like you</string>
    <string name="internet_not_available">Internet is not available!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_delete">Do you want to delete this record?</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="title_onboard_1">Soar with captivating piano melodies</string>
    <string name="title_onboard_2">Emotions with romantic guitar notes</string>
    <string name="title_onboard_3">Exciting, full of excitement with a fiery drum melody</string>
    <string name="guide_1">Choose song and click button to start</string>
    <string name="guide_2">Change the song speed</string>
    <string name="guide_3">Change the keyboard theme</string>
    <string name="delete_success">Delete successfully!</string>
    <string name="rename_successfully">Rename successfully!</string>
    <string name="confirm_exit">Exit App</string>
    <string name="exit_confirm">Do you want to exit ?</string>
    <string name="exit">Exit</string>
    <string name="stay">Stay</string>
    <string name="empty_key">You don’t have any Keys Record</string>
    <string name="empty_mic">You don’t have any Mic Record</string>
    <string name="rq_per">Please grant Record Audio permission for the function to work</string>
    <string name="rq_per_read_ex">Please grant Read external storage permission for the function to work</string>
    <string name="rq_per_read_au">Please grant Read media audio permission for the function to work</string>
    <string name="grant_per">Grant Permission</string>
    <string name="grant">Grant</string>
    <string name="st_piano_1">Classic</string>
    <string name="st_piano_2">Anime 1</string>
    <string name="st_piano_3">Anime 2</string>
    <string name="st_piano_4">Anime 3</string>
    <string name="st_piano_5">Ramadan</string>
    <string name="st_piano_6">Shimmery 1</string>
    <string name="st_piano_7">Shimmery 2</string>
    <string name="st_piano_8">Moto 1</string>
    <string name="st_piano_9">Moto 2</string>
    <string name="st_piano_10">Car</string>
    <string name="st_piano_11">Holographic</string>
    <string name="st_piano_12">Cute</string>
    <string name="st_piano_13">Dolphin</string>
    <string name="st_piano_14">Kitten</string>
    <string name="st_piano_15">Kitten paint</string>
    <string name="st_piano_16">Classic 2</string>
    <string name="st_piano_17">Classic 3</string>
    <string name="st_piano_18">Classic 4</string>
    <string name="st_piano_19">Outerspace</string>
    <string name="st_piano_20">Sport</string>
    <string name="st_piano_21">Sport 2</string>
    <string name="st_piano_22">Warriors</string>
    <string name="st_piano_23">Robot</string>
    <string name="st_piano_24">Wood</string>
    <string name="st_piano_25">Flame</string>
    <string name="st_piano_26">Ocean</string>
    <string name="st_piano_27">Sakura</string>
    <string name="st_piano_28">Roses</string>
    <string name="st_piano_29">Flower paint</string>
    <string name="st_piano_30">Star night</string>
    <string name="st_piano_31">Daylight</string>
    <string name="st_piano_32">Scenery</string>
    <string name="st_piano_33">Loving</string>
    <string name="st_piano_34">Chrismast</string>
    <string name="st_piano_35">Happy new year</string>
    <string name="st_piano_36">Happy new year 2</string>
    <string name="st_piano_37">Halloween</string>
</resources>