<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/_12sdp"
    android:paddingVertical="@dimen/_12sdp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_500"
        android:text="@string/delete"
        android:textColor="@color/n6"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/containerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <TextView
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/font_400"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_6sdp"
            android:text="@string/do_you_want_delete"
            android:textColor="@color/n6"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>


    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_n3_corner_8"
        android:fontFamily="@font/font_700"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/no"
        android:textColor="@color/n4"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toStartOf="@id/btnDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerName" />

    <TextView
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_gradient_learn"
        android:fontFamily="@font/font_700"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/yes"
        android:textColor="@color/n6"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toTopOf="@id/btnCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>