<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_150sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_n2_corner_12"
    android:orientation="vertical">

    <LinearLayout
        android:foreground="@drawable/fg_ripple_effect"
        android:id="@+id/containerRename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_6sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_edit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/font_400"
            android:text="@string/rename"
            android:textColor="@color/n6"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:foreground="@drawable/fg_ripple_effect"
        android:id="@+id/containerShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_6sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_share_item" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/font_400"
            android:text="@string/share"
            android:textColor="@color/n6"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:foreground="@drawable/fg_ripple_effect"
        android:id="@+id/containerDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_6sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_delete" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/font_400"
            android:text="@string/delete"
            android:textColor="@color/n6"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

</LinearLayout>