<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_24sdp"
    tools:background="@color/n1">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/choose_other_keyboard"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btnDoubleKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:foreground="@drawable/fg_ripple_effect"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_double_keys" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:drawablePadding="@dimen/_12sdp"
            android:fontFamily="@font/font_400"
            android:gravity="center"
            android:text="@string/double_key"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnTwoPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="@drawable/fg_ripple_effect"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDoubleKey">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_two_players" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:drawablePadding="@dimen/_12sdp"
            android:gravity="center"
            android:fontFamily="@font/font_400"
            android:text="@string/two_players"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>