<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_setting"
    tools:context=".view.setting.SettingActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:foreground="@drawable/fg_ripple_effect"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_500"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <LinearLayout
        android:id="@+id/containerLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_lang_unselected"
        android:foreground="@drawable/fg_ripple_effect_8"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_language" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/font_500"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_lang_unselected"
        android:foreground="@drawable/fg_ripple_effect_8"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/containerLanguage">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_rate_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/font_500"
            android:text="@string/rate_us"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_lang_unselected"
        android:foreground="@drawable/fg_ripple_effect_8"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/containerRate">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/font_500"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerPrivacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_lang_unselected"
        android:foreground="@drawable/fg_ripple_effect_8"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/containerShare">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_privacy_policy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/font_500"
            android:text="@string/privacy"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>